--- a/en/index.html
+++ b/en/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./reset.css" />
-  <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="../reset.css" />
+  <link rel="stylesheet" href="../styles.css" />
   <title>КУЛЬТУРНИЙ ОПІР</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,10 +14,10 @@
 </head>
 
 <body>
-  <section class="page-banner" style="background-image: url(./assets/foundation-background.jpg)">
+  <section class="page-banner" style="background-image: url(../assets/foundation-background.jpg)">
     <h1 class="page-banner__title">
-      БЛАГОДІЙНИЙ ФОНД <br />
-      «КУЛЬТУРНИЙ ОПІР»
+      CHARITABLE FOUNDATION <br />
+      «CULTURAL RESISTANCE»
     </h1>
 
     <div class="page-banner__lang">
@@ -29,7 +29,8 @@
   <section class="page-content">
     <div class="page-content-container">
       <h2 class="page-content__title">
-        Допомога нашим захисникам <br /> ЗСУ, ТРО та волонтерам
+        Help our defenders <br />
+        ZSU, TRO and volunteers
       </h2>
 
       <ul class="page-content__list">
@@ -37,51 +38,51 @@
           <p class="page-content__list-item-text">
             <span>IBAN</span> UA423052990000026208749427471
           </p>
-          <img class="page-content__list-item-icon" src="./assets/contentCopyBlack24Dp.png" alt="copy" />
+          <img class="page-content__list-item-icon" src="../assets/contentCopyBlack24Dp.png" alt="copy" />
         </li>
         <p class="page-content__list-item-subtitle">
-          Тимчасовий рахунок. Валюта картки – USD
+          Temporary account. Card currency - USD
         </p>
 
         <li class="page-content__list-item js-button-copy" data-number="0x5c18741F1AF0E174bE0cceD710D1E43682F570cb">
           <p class="page-content__list-item-text">
             <span>ETH</span> 0x5c18741F1AF0E174bE0cceD710D1E43682F570cb
           </p>
-          <img class="page-content__list-item-icon" src="./assets/contentCopyBlack24Dp.png" alt="copy" />
+          <img class="page-content__list-item-icon" src="../assets/contentCopyBlack24Dp.png" alt="copy" />
         </li>
 
         <li class="page-content__list-item js-button-copy" data-number="bc1qvw4tvsxz7h0wg884w0z27mfeudw7yhh6ekd5rj">
           <p class="page-content__list-item-text">
             <span>BTC</span> bc1qvw4tvsxz7h0wg884w0z27mfeudw7yhh6ekd5rj
           </p>
-          <img class="page-content__list-item-icon" src="./assets/contentCopyBlack24Dp.png" alt="copy" />
+          <img class="page-content__list-item-icon" src="../assets/contentCopyBlack24Dp.png" alt="copy" />
         </li>
 
         <li class="page-content__list-item js-button-copy" data-number="bnb1cnuwf6wac6wz65632g44dkqc442nmnzw8klh7m">
           <p class="page-content__list-item-text">
             <span>BNB</span> bnb1cnuwf6wac6wz65632g44dkqc442nmnzw8klh7m
           </p>
-          <img class="page-content__list-item-icon" src="./assets/contentCopyBlack24Dp.png" alt="copy" />
+          <img class="page-content__list-item-icon" src="../assets/contentCopyBlack24Dp.png" alt="copy" />
         </li>
 
         <li class="page-content__list-item js-button-copy" data-number="SSAnZWv5vYY6BQuRw19VXzgpFS7t5q5FZXTa72ygi7S">
           <p class="page-content__list-item-text">
             <span>USDC</span> SSAnZWv5vYY6BQuRw19VXzgpFS7t5q5FZXTa72ygi7S
           </p>
-          <img class="page-content__list-item-icon" src="./assets/contentCopyBlack24Dp.png" alt="copy" />
+          <img class="page-content__list-item-icon" src="../assets/contentCopyBlack24Dp.png" alt="copy" />
         </li>
 
         <li class="page-content__list-item js-button-copy" data-number="TQWB95iCr9rkfNBZKTPyZu7LKpTfPVynxu">
           <p class="page-content__list-item-text">
             <span>USDT</span> TQWB95iCr9rkfNBZKTPyZu7LKpTfPVynxu
           </p>
-          <img class="page-content__list-item-icon" src="./assets/contentCopyBlack24Dp.png" alt="copy" />
+          <img class="page-content__list-item-icon" src="../assets/contentCopyBlack24Dp.png" alt="copy" />
         </li>
       </ul>
     </div>
   </section>
 
-  <script src="./main.js"></script>
+  <script src="../main.js"></script>
 </body>
 
 </html>
