add highlight to active link

--- a/en/index.html
+++ b/en/index.html
@@ -22,7 +22,7 @@
 
     <div class="page-banner__lang">
       <a href="/" class="page-banner__link">UA</a>
-      <a href="/en/index.html" class="page-banner__link">EN</a>
+      <a href="/en/index.html" class="page-banner__link active">EN</a>
     </div>
   </section>
 
