--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </h1>
 
     <div class="page-banner__lang">
-      <a href="/" class="page-banner__link">UA</a>
+      <a href="/" class="page-banner__link active">UA</a>
       <a href="/en/index.html" class="page-banner__link">EN</a>
     </div>
   </section>
